[package]
name = "net_monitor"
version = "2.2.3"
edition = "2021"
description = "高性能并发网络监控系统 - 零冗余生产版"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"

# ✅ 关键修复：启用 chrono 特性以支持 ChronoLocal
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
