[package]
name = "net_monitor"
version = "2.2.6"
edition = "2021"
description = "网络脉搏监控系统 - 高性能异步 TCP 连通性检测"
authors = ["MTL"]
license = "MIT"
repository = "https://github.com/mtl-123/netpulse-rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
